feat: almost there

--- a/css/style.css
+++ b/css/style.css
@@ -39,8 +39,22 @@
     z-index: 80;
 }
 
+.score{
+    position: absolute;
+    width: 7%;
+    background-color: white;
+    text-align: center;
+    padding: 2px;
+    border: 1px solid black;
+    font-size: 1.5em;
+    font-weight: 600;
+    z-index: 500;    
+}
+
 .jump{
+    position: absolute;
     animation: jump 700ms ease-out;
+    
 }
 
 @keyframes pipe-animation{
@@ -76,5 +90,17 @@
     }
     to{
         right: 100%;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .jump{
+        animation: jump 1000ms ease-out;
+    }
+    .pipe{        
+        animation: pipe-animation 1s linear infinite;
+    }
+    .score{
+        width: 30%;
     }
 }
