--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,10 @@
     text-align: center;
     padding: 2px;
     border: 1px solid black;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-weight: 600;
-    z-index: 500;    
+    z-index: 500;
+    margin: 5px    
 }
 
 .jump{
