--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
 .jump{
     position: absolute;
     animation: none;
-    /* animation: jump 700ms ease-out; */
+    animation: jump 700ms ease-out;
     
 }
 
